# Sensei

./: LICENSE  README.md  config.toml  project-structure.md  pyproject.toml  sensei.db
docs/: 01-vision.md  02-principles.md
src/sensei/: __main__.py  main.py
src/sensei/cli/: app.py
src/sensei/gateway/: config.py
src/sensei/persistence/: database.py
