[project]
name = "sensei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kuldeepguptahub", email = "kuldeep.gupta2603@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sensei = "sensei:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
